--- a/AndroidSimple/build.gradle
+++ b/AndroidSimple/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.1"
+    buildToolsVersion "26.0.0"
     defaultConfig {
         applicationId "com.pinger.repertory"
         minSdkVersion 18
@@ -27,4 +27,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
+    compile project(':AndroidWidget')
+    compile project(":AndroidBaseLib")
+    compile project(":AndroidUtils")
 }
