--- a/AndroidWidget/build.gradle
+++ b/AndroidWidget/build.gradle
@@ -28,4 +28,7 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:26.+'
     testCompile 'junit:junit:4.12'
+//    下拉刷新控件
+    compile 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.4-7'
+    compile 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.4-7'
 }
