--- a/AndroidWidget/build.gradle
+++ b/AndroidWidget/build.gradle
@@ -27,4 +27,7 @@ dependencies {
     compile rootProject.ext.dependencies.appcompat_v7
     compile rootProject.ext.dependencies.constraintlayout
     compile rootProject.ext.dependencies.kotlin
+    compile rootProject.ext.dependencies.SmartRefreshLayout
+    compile rootProject.ext.dependencies.SmartRefreshHeader
+    compile project(':AndroidBaseLib')
 }
