--- a/config.gradle
+++ b/config.gradle
@@ -10,12 +10,14 @@ ext {
     ]
 
     dependencies = [
-            appcompat_v4    : 'com.android.support:support-v4:27.0.0',
-            appcompat_v7    : 'com.android.support:appcompat-v7:27.0.0',
-            design          : 'com.android.support:design:27.0.0',
-            cardview        : 'com.android.support:cardview-v7:27.0.0',
-            recyclerview    : 'com.android.support:recyclerview-v7:27.0.0',
-            constraintlayout: 'com.android.support.constraint:constraint-layout:1.0.2',
-            kotlin          : 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.2.0',
+            appcompat_v4      : 'com.android.support:support-v4:27.0.0',
+            appcompat_v7      : 'com.android.support:appcompat-v7:27.0.0',
+            design            : 'com.android.support:design:27.0.0',
+            cardview          : 'com.android.support:cardview-v7:27.0.0',
+            recyclerview      : 'com.android.support:recyclerview-v7:27.0.0',
+            constraintlayout  : 'com.android.support.constraint:constraint-layout:1.0.2',
+            kotlin            : 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.2.0',
+            SmartRefreshLayout: 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.4-7',
+            SmartRefreshHeader: 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.4-7',
     ]
 }
