--- a/.gitignore
+++ b/.gitignore
@@ -39,12 +39,7 @@ captures/
 
 # IntelliJ
 *.iml
-/.idea
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/gradle.xml
-.idea/dictionaries
-.idea/libraries
+.idea
 
 # Keystore files
 # Uncomment the following line if you do not want to check your keystore files in.
