--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -24,7 +24,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(':AndroidWidget')
+    compile project(':widget')
 
     compile rootProject.ext.dependencies.appcompat_v7
     compile rootProject.ext.dependencies.constraintlayout
