--- a/widget/build.gradle
+++ b/widget/build.gradle
@@ -29,5 +29,5 @@ dependencies {
     compile rootProject.ext.dependencies.kotlin
     compile rootProject.ext.dependencies.SmartRefreshLayout
     compile rootProject.ext.dependencies.SmartRefreshHeader
-    compile project(':AndroidBaseLib')
+    compile project(':baselib')
 }
