--- a/baselib/build.gradle
+++ b/baselib/build.gradle
@@ -23,8 +23,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile rootProject.ext.dependencies.appcompat_v7
-    compile rootProject.ext.dependencies.design
-    compile rootProject.ext.dependencies.kotlin
+    api fileTree(dir: 'libs', include: ['*.jar'])
+    api rootProject.ext.dependencies.appcompat_v7
+    api rootProject.ext.dependencies.design
+    api rootProject.ext.dependencies.kotlin
+
+    api project(':baseuilib')
 }
