--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -23,10 +23,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(':widget')
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation project(':widget')
 
-    compile rootProject.ext.dependencies.appcompat_v7
-    compile rootProject.ext.dependencies.constraintlayout
-    compile rootProject.ext.dependencies.kotlin
+    implementation rootProject.ext.dependencies.appcompat_v7
+    implementation rootProject.ext.dependencies.constraintlayout
+    implementation rootProject.ext.dependencies.kotlin
 }
