--- a/widget/build.gradle
+++ b/widget/build.gradle
@@ -23,11 +23,11 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile rootProject.ext.dependencies.appcompat_v7
-    compile rootProject.ext.dependencies.constraintlayout
-    compile rootProject.ext.dependencies.kotlin
-    compile rootProject.ext.dependencies.SmartRefreshLayout
-    compile rootProject.ext.dependencies.SmartRefreshHeader
-    compile project(':baselib')
+    api fileTree(dir: 'libs', include: ['*.jar'])
+    api rootProject.ext.dependencies.appcompat_v7
+    api rootProject.ext.dependencies.constraintlayout
+    api rootProject.ext.dependencies.kotlin
+    api rootProject.ext.dependencies.SmartRefreshLayout
+    api rootProject.ext.dependencies.SmartRefreshHeader
+    api project(':baselib')
 }
