--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.pinger.repertory">
+    package="com.leibo.repertory">
 
     <application
         android:allowBackup="true"
@@ -9,19 +9,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".main.MainActivity">
+        <activity android:name="com.leibo.repertory.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".widget.CustomViewActivity" />
-        <activity android:name=".widget.falling.FallingViewActivity" />
-        <activity android:name=".widget.banner.BannerViewActivity"/>
-        <activity android:name=".recycler.RecyclerViewActivity" />
-        <activity android:name=".recycler.RecyclerPageActivity" />
-        <activity android:name=".player.PlayerMainActivity" />
+        <activity android:name="com.leibo.repertory.widget.CustomViewActivity" />
+        <activity android:name="com.leibo.repertory.widget.falling.FallingViewActivity" />
+        <activity android:name="com.leibo.repertory.widget.banner.BannerViewActivity"/>
+        <activity android:name="com.leibo.repertory.recycler.RecyclerViewActivity" />
+        <activity android:name="com.leibo.repertory.recycler.RecyclerPageActivity" />
+        <activity android:name="com.leibo.repertory.player.PlayerMainActivity" />
     </application>
 
 </manifest>
