--- a/baselib/src/main/AndroidManifest.xml
+++ b/baselib/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 
-    package="com.pinger.baselib">
+    package="com.leibo.baselib">
 
     <application android:allowBackup="true" android:label="@string/app_name"
         android:supportsRtl="true">
