--- a/config/sign.properties
+++ b/config/sign.properties
@@ -1,5 +1,5 @@
-#此处存放Key配置文件
-STORE_PASSWORD=a8a8a8a8a8
-KEY_PASSWORD=a8a8a8a8a8
-KEY_ALIAS=fungoa8
-STORE_FILE=A8CommonLib.jks
+# 此处存放sign配置文件
+STORE_PASSWORD=leibo888
+KEY_PASSWORD=leibo888
+KEY_ALIAS=leibo
+STORE_FILE=leibo.jks
