--- a/basenet/build.gradle
+++ b/basenet/build.gradle
@@ -12,8 +12,8 @@ android {
         targetSdkVersion rootProject.ext.android.targetSdkVersion
         versionCode rootProject.ext.android.versionCode
         versionName rootProject.ext.android.versionName
-        multiDexEnabled true
     }
+
 
     buildTypes {
         release {
@@ -21,13 +21,22 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
 }
 
 dependencies {
     api fileTree(dir: 'libs', include: ['*.jar'])
-    api project(':baseuilib')
 
-    implementation 'com.github.bumptech.glide:glide:4.6.1'
-    kapt 'com.github.bumptech.glide:compiler:4.6.1'
-    compile "org.jetbrains.kotlin:kotlin-reflect:1.2.0-release-90 (1.2.0)"
+    implementation 'com.android.support:appcompat-v7:27.1.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.0.8'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.8.0'
+    implementation 'com.squareup.okio:okio:1.13.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.2.0'
+}
+repositories {
+    mavenCentral()
 }
