--- a/baselib/build.gradle
+++ b/baselib/build.gradle
@@ -26,8 +26,7 @@ android {
 dependencies {
     api fileTree(dir: 'libs', include: ['*.jar'])
     api project(':baseuilib')
-
+    api rootProject.ext.dependencies.kotlin
     implementation 'com.github.bumptech.glide:glide:4.6.1'
     kapt 'com.github.bumptech.glide:compiler:4.6.1'
-    compile "org.jetbrains.kotlin:kotlin-reflect:1.2.0-release-90 (1.2.0)"
 }
