--- a/build.gradle
+++ b/build.gradle
@@ -27,3 +27,15 @@ task clean(type: Delete) {
 task wrapper(type: Wrapper) {
     gradleVersion = '4.4'
 }
+
+// 依赖冲突
+subprojects {
+    project.configurations.all {
+        resolutionStrategy.eachDependency { details ->
+            if (details.requested.group == 'com.android.support'
+                    && !details.requested.name.contains('multidex') ) {
+                details.useVersion "27.0.0"
+            }
+        }
+    }
+}
