--- a/baselib/build.gradle
+++ b/baselib/build.gradle
@@ -28,5 +28,6 @@ dependencies {
     api project(':baseuilib')
     api rootProject.ext.dependencies.kotlin
     implementation 'com.github.bumptech.glide:glide:4.6.1'
+    implementation "com.github.bumptech.glide:okhttp3-integration:4.6.1"
     kapt 'com.github.bumptech.glide:compiler:4.6.1'
 }
