--- a/baseuilib/build.gradle
+++ b/baseuilib/build.gradle
@@ -25,8 +25,9 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation rootProject.ext.dependencies.kotlin
     api rootProject.ext.dependencies.appcompat_v7
     api rootProject.ext.dependencies.design
+    api 'com.android.support.constraint:constraint-layout:1.1.0-beta6'
 }
