--- a/baselib/src/main/AndroidManifest.xml
+++ b/baselib/src/main/AndroidManifest.xml
@@ -1,1 +1,6 @@
-<manifest package="com.leibo.baselib" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.leibo.baselib">
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+</manifest>
