--- a/baselib/build.gradle
+++ b/baselib/build.gradle
@@ -28,8 +28,8 @@ dependencies {
     api project(':baseuilib')
     implementation rootProject.ext.dependencies.kotlin
 
-    implementation 'com.github.bumptech.glide:glide:4.6.1'
-    implementation "com.github.bumptech.glide:okhttp3-integration:4.6.1"
+    api 'com.github.bumptech.glide:glide:4.6.1'
+    api "com.github.bumptech.glide:okhttp3-integration:4.6.1"
     kapt 'com.github.bumptech.glide:compiler:4.6.1'
 
     implementation 'com.google.dagger:dagger:2.9'
