--- a/baselib/build.gradle
+++ b/baselib/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     api project(':baseuilib')
     implementation rootProject.ext.dependencies.kotlin
+    implementation files('libs/qq_open_sdk_v3.3.1.jar')
 
     api 'com.github.bumptech.glide:glide:4.6.1'
     api "com.github.bumptech.glide:okhttp3-integration:4.6.1"
@@ -51,4 +52,7 @@ dependencies {
     implementation 'com.squareup.okio:okio:1.13.0'
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+
+    implementation 'com.sina.weibo.sdk:core:4.2.7:openDefaultRelease@aar'
+    implementation 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:1.4.0'
 }
