--- a/baselib/build.gradle
+++ b/baselib/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     api project(':baseuilib')
     implementation rootProject.ext.dependencies.kotlin
     implementation files('libs/qq_open_sdk_v3.3.1.jar')
+    implementation files('libs/alipaySdk-20180403.jar')
 
     api 'com.github.bumptech.glide:glide:4.6.1'
     api "com.github.bumptech.glide:okhttp3-integration:4.6.1"
@@ -53,6 +54,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
 
-    implementation 'com.sina.weibo.sdk:core:4.2.7:openDefaultRelease@aar'
-    implementation 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:1.4.0'
+
+    implementation 'com.sina.weibo.sdk:core:4.2.7:openDefaultRelease@aar'  // 微博登录分享SDK
+    implementation 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'  // 微信SDK，包含登录分享支付和统计功能
 }
