update image progress with gif.

--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -28,8 +28,9 @@
         <activity
             android:name=".player.PlayerMainActivity"
             android:configChanges="orientation|keyboardHidden|screenSize" />
-        <activity android:name=".image.ImageTestActivity" />
+        <activity android:name=".image.ImageMainActivity" />
         <activity android:name=".social.SocialActivity" />
+        <activity android:name=".image.ImageItemActivity" />
     </application>
 
 </manifest>
