--- a/baselib/build.gradle
+++ b/baselib/build.gradle
@@ -47,7 +47,7 @@ dependencies {
 
     implementation 'com.google.code.gson:gson:2.8.0'
 
-    implementation 'io.reactivex.rxjava2:rxjava:2.0.8'
+    api 'io.reactivex.rxjava2:rxjava:2.0.8'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation 'org.reactivestreams:reactive-streams:1.0.0.final'
     implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
