--- a/imagego/build.gradle
+++ b/imagego/build.gradle
@@ -25,10 +25,16 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation rootProject.ext.dependencies.kotlin
-    api rootProject.ext.dependencies.appcompat_v7
+    implementation rootProject.ext.dependencies.appcompat_v7
 
     // Glide依赖
-    api 'com.github.bumptech.glide:glide:4.6.1'
-    api "com.github.bumptech.glide:okhttp3-integration:4.6.1"
+    implementation 'com.github.bumptech.glide:glide:4.6.1'
+    implementation "com.github.bumptech.glide:okhttp3-integration:4.6.1"
     kapt 'com.github.bumptech.glide:compiler:4.6.1'
+
+    implementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'org.assertj:assertj-core:3.3.0'
+    testImplementation 'org.mockito:mockito-core:2.0.43-beta'
+    testImplementation 'org.robolectric:robolectric:3.1.2'
 }
