--- a/imagego/build.gradle
+++ b/imagego/build.gradle
@@ -32,9 +32,9 @@ dependencies {
     implementation "com.github.bumptech.glide:okhttp3-integration:4.6.1"
     kapt 'com.github.bumptech.glide:compiler:4.6.1'
 
-    implementation 'junit:junit:4.12'
-    testImplementation 'junit:junit:4.12'
-    testImplementation 'org.assertj:assertj-core:3.3.0'
-    testImplementation 'org.mockito:mockito-core:2.0.43-beta'
-    testImplementation 'org.robolectric:robolectric:3.1.2'
+//    implementation 'junit:junit:4.12'
+//    testImplementation 'junit:junit:4.12'
+//    testImplementation 'org.assertj:assertj-core:3.3.0'
+//    testImplementation 'org.mockito:mockito-core:2.0.43-beta'
+//    testImplementation 'org.robolectric:robolectric:3.1.2'
 }
