--- a/funplayer/build.gradle
+++ b/funplayer/build.gradle
@@ -17,7 +17,14 @@ android {
 
     }
 
-    buildTypes {
+
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
+        }
+    }
+
+        buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -36,6 +43,6 @@ dependencies {
 
     implementation "tv.danmaku.ijk.media:ijkplayer-java:0.8.8"
     implementation 'com.danikula:videocache:2.7.0'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.2.41"
-    implementation "com.android.support.constraint:constraint-layout:1.1.2"
+    implementation rootProject.ext.dependencies.constraintlayout
+    implementation rootProject.ext.dependencies.kotlin
 }
