--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ allprojects {
         jcenter()
         google()
         maven { url "https://dl.bintray.com/thelasterstar/maven/" }
+        maven { url 'https://jitpack.io' }
     }
 }
 
