--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -32,6 +32,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':baselib')
+    implementation project(':baseuilib')
     implementation project(':imagego')
     implementation project(':funplayer')
     implementation rootProject.ext.dependencies.constraintlayout
