--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation project(':baselib')
     implementation project(':baseuilib')
     implementation project(':imagego')
+    implementation project(':socialgo')
     implementation project(':funplayer')
     implementation rootProject.ext.dependencies.constraintlayout
     implementation rootProject.ext.dependencies.kotlin
