--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ captures/
 # IntelliJ
 *.iml
 .idea/
+*.apk
 
 # Keystore files
 # Uncomment the following line if you do not want to check your keystore files in.
