--- a/baselib/build.gradle
+++ b/baselib/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation rootProject.ext.dependencies.kotlin
     implementation rootProject.ext.dependencies.appcompat_v7
     implementation rootProject.ext.dependencies.design
+    implementation rootProject.ext.dependencies.constraintlayout
 
     implementation 'com.google.dagger:dagger:2.9'
     kapt 'com.google.dagger:dagger-compiler:2.9'
