--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,17 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 apply from: "config.gradle"
+
 buildscript {
+
     repositories {
         jcenter()
         google()
     }
+
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.3'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.2.30"
+        classpath 'com.android.tools.build:gradle:3.2.0-beta04'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.2.41"
+        classpath 'android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0-alpha04'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -17,27 +21,11 @@ allprojects {
     repositories {
         jcenter()
         google()
-        maven { url "https://dl.bintray.com/thelasterstar/maven/" }
         maven { url 'https://jitpack.io' }
+        maven { url "https://dl.bintray.com/thelasterstar/maven/" }
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
-}
-
-task wrapper(type: Wrapper) {
-    gradleVersion = '4.4'
-}
-
-// 依赖冲突
-subprojects {
-    project.configurations.all {
-        resolutionStrategy.eachDependency { details ->
-            if (details.requested.group == 'com.android.support'
-                    && !details.requested.name.contains('multidex') ) {
-                details.useVersion "27.0.0"
-            }
-        }
-    }
 }
