--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -2,10 +2,10 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'androidx.navigation.safeargs'
 
 android {
     compileSdkVersion rootProject.ext.android.compileSdkVersion
-    buildToolsVersion rootProject.ext.android.buildToolsVersion
 
     defaultConfig {
         minSdkVersion rootProject.ext.android.minSdkVersion
@@ -31,6 +31,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    lintOptions {
+        abortOnError false
+    }
 }
 
 dependencies {
@@ -42,10 +46,6 @@ dependencies {
 
     kapt 'com.google.dagger:dagger-compiler:2.9'
 
-    // seekBar样式
-    implementation 'org.adw.library:discrete-seekbar:1.0.1'
-
-    implementation 'com.github.PingerOne:ImageGo:2.0.1'
-    implementation 'com.github.PingerOne:SocialGo:1.0.0'
-    implementation 'com.github.PingerOne:FunPlayer:1.0.0'
+    implementation "android.arch.navigation:navigation-fragment:1.0.0-alpha04"
+    implementation "android.arch.navigation:navigation-ui:1.0.0-alpha04"
 }
