--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         <activity android:name=".main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
@@ -30,7 +31,9 @@
             android:configChanges="orientation|keyboardHidden|screenSize" />
         <activity android:name=".image.ImageMainActivity" />
         <activity android:name=".social.SocialActivity" />
-
+        <activity
+            android:name=".main.PageActivity"
+            android:theme="@style/BaseAppTheme.NoActionBar.SwipeBack" />
     </application>
 
 </manifest>
