--- a/baselib/build.gradle
+++ b/baselib/build.gradle
@@ -38,11 +38,11 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation 'org.reactivestreams:reactive-streams:1.0.0.final'
     implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
-    implementation 'com.squareup.okhttp3:okhttp:3.9.1'
-    implementation 'com.squareup.okio:okio:1.13.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    implementation 'com.squareup.okio:okio:1.14.0'
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
 
-    implementation "android.arch.navigation:navigation-fragment:1.0.0-alpha04"
-    implementation "android.arch.navigation:navigation-ui:1.0.0-alpha04"
+    implementation 'me.yokeyword:fragmentation-core:1.3.5'
+    implementation 'me.yokeyword:fragmentation-swipeback:1.3.5'
 }
