--- a/baselib/build.gradle
+++ b/baselib/build.gradle
@@ -43,6 +43,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
 
-    implementation 'me.yokeyword:fragmentation-core:1.3.5'
-    implementation 'me.yokeyword:fragmentation-swipeback:1.3.5'
+    api 'me.yokeyword:fragmentation-core:1.3.5'
+    api 'me.yokeyword:fragmentation-swipeback:1.3.5'
+
+    api 'com.tencent.sonic:sdk:3.0.0'
 }
