--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -28,6 +28,9 @@
 
         <activity android:name=".main.TestActivity"
             android:theme="@style/BaseAppTheme.SwipeBack"/>
+
+
+        <activity android:name=".main.normal.NormalActivity" />
     </application>
 
 </manifest>
