--- a/fungo/build.gradle
+++ b/fungo/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.github.dcendents.android-maven'
 
-group='com.github.pinger'
+group='com.github.PingerOne'
 
 android {
     compileSdkVersion 28
