--- a/baselib/build.gradle
+++ b/baselib/build.gradle
@@ -4,16 +4,16 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.github.dcendents.android-maven'
 
-group='com.github.PingerOne'
+group = 'com.github.PingerOne'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion Integer.valueOf(rootProject.getBuildProperty()["compileSdkVersion"])
 
     defaultConfig {
-        minSdkVersion 18
-        targetSdkVersion 28
-        versionCode 1100
-        versionName '1.1.1'
+        minSdkVersion Integer.valueOf(rootProject.getBuildProperty()["minSdkVersion"])
+        targetSdkVersion Integer.valueOf(rootProject.getBuildProperty()["targetSdkVersion"])
+        versionCode Integer.valueOf(rootProject.getBuildProperty()["versionCode"])
+        versionName rootProject.getBuildProperty()["versionName"]
     }
 
     buildTypes {
@@ -27,20 +27,19 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    api 'com.android.support:appcompat-v7:28.0.0'
+    api rootProject.getDependenceProperty()['support_v7']
 
-    api 'com.android.support:design:28.0.0'
-    api 'com.android.support:cardview-v7:28.0.0'
-    api 'com.android.support:recyclerview-v7:28.0.0'
+    api rootProject.getDependenceProperty()['support_design']
+    api rootProject.getDependenceProperty()["support_cardview"]
+    api rootProject.getDependenceProperty()["support_recyclerview"]
 
-    api 'com.android.support.constraint:constraint-layout:1.1.3'
-    api 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.2.70'
+    api rootProject.getDependenceProperty()["constraint-layout"]
+    api rootProject.getDependenceProperty()["kotlin"]
 
-    api 'me.yokeyword:fragmentation-core:1.3.5'
-    api 'me.yokeyword:fragmentation-swipeback:1.3.5'
+    api rootProject.getDependenceProperty()["fragmentation_core"]
+    api rootProject.getDependenceProperty()["fragmentation_swipeback"]
 
-    implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.4-7'
-    implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.4-7'
-
-    implementation 'com.tencent.sonic:sdk:3.0.0'
+    api rootProject.getDependenceProperty()["smartrefresh"]
+    api rootProject.getDependenceProperty()["smartrefresh_header"]
+    api rootProject.getDependenceProperty()["sonic"]
 }
