--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,9 +23,21 @@ android {
     }
 
     buildTypes {
+
+        debug {
+            buildConfigField "Boolean", "CAN_SWITCH_ENV", rootProject.getBuildProperty()['canSwitchEnv']
+            buildConfigField "Boolean", "CAN_PRINT_LOG", rootProject.getBuildProperty()['canPrintLog']
+            buildConfigField "Integer", "CURRENT_DEV_ENV", rootProject.getBuildProperty()['currentDevEnv']
+        }
+
         release {
             minifyEnabled false
             signingConfig signingConfigs.config
+
+            buildConfigField "String", "canSwitchEnv", rootProject.getBuildProperty()['canSwitchEnv']
+            buildConfigField "String", "canPrintLog", rootProject.getBuildProperty()['canPrintLog']
+            buildConfigField "Integer", "currentDevEnv", rootProject.getBuildProperty()['currentDevEnv']
+
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -39,5 +51,5 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':baselib')
 
-    implementation 'com.github.PingerOne:ImageGo:2.0.1'
+    implementation 'com.github.PingerOne:ImageGo:2.0.2'
 }
