--- a/config/dependence.properties
+++ b/config/dependence.properties
@@ -1,12 +1,22 @@
 # 项目的依赖类库
+#---------------------------------------------------------------------#
+# 官方依赖
 support_v7=com.android.support:appcompat-v7:28.0.0
 support_design=com.android.support:design:28.0.0
 support_cardview=com.android.support:cardview-v7:28.0.0
 support_recyclerview=com.android.support:recyclerview-v7:28.0.0
 constraint-layout=com.android.support.constraint:constraint-layout:1.1.3
+#---------------------------------------------------------------------#
+# kotlin
 kotlin=org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.2.70
+#---------------------------------------------------------------------#
+# 框架[Fragmentation],处理单Activity多Fragment
 fragmentation_core=me.yokeyword:fragmentation-core:1.3.5
 fragmentation_swipeback=me.yokeyword:fragmentation-swipeback:1.3.5
+#---------------------------------------------------------------------#
+# 下拉刷新框架[SmartRefreshLayout]
 smartrefresh=com.scwang.smartrefresh:SmartRefreshLayout:1.0.4-7
 smartrefresh_header=com.scwang.smartrefresh:SmartRefreshHeader:1.0.4-7
+#---------------------------------------------------------------------#
+# 腾讯h5秒开框架
 sonic=com.tencent.sonic:sdk:3.0.0
