--- a/netgo/build.gradle
+++ b/netgo/build.gradle
@@ -27,7 +27,7 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     api 'io.reactivex.rxjava2:rxjava:2.0.8'
     api 'com.squareup.retrofit2:retrofit:2.3.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    api 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.4.2'
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
