合并图片加载框架

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,5 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':baselib')
     implementation project(':netgo')
-
-    implementation 'com.github.PingerOne:ImageGo:2.0.2'
+    implementation project(':imagego')
 }
