--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,7 @@ captures/
 /.idea/workspace.xml
 /.idea/vcs.xml
 /.idea/runConfigurations.xml
+/.idea/misc.xml
+/.idea/markdown-navigator.xml
+/.idea/markdown-navigator
+
