控制每个类库的版本

--- a/config/build.properties
+++ b/config/build.properties
@@ -14,7 +14,18 @@ compileSdkVersion=28
 # app的版本
 versionCode=1000
 versionName='1.0.3'
-
+#------------------------#
+# BaseLib类库的版本
+baseLibVersionCode=1000
+baseLibVersionName='1.1.1'
+#------------------------#
+# NetGo类库的版本
+netGoVersionCode=1000
+netGoVersionName='1.0.0'
+#------------------------#
+# ImageGo类库的版本
+imageGoVersionCode=1000
+imageGoVersionName='2.0.2'
 
 
 
