--- a/baselib/build.gradle
+++ b/baselib/build.gradle
@@ -12,8 +12,8 @@ android {
     defaultConfig {
         minSdkVersion Integer.valueOf(rootProject.getBuildProperty()["minSdkVersion"])
         targetSdkVersion Integer.valueOf(rootProject.getBuildProperty()["targetSdkVersion"])
-        versionCode Integer.valueOf(rootProject.getBuildProperty()["versionCode"])
-        versionName rootProject.getBuildProperty()["versionName"]
+        versionCode Integer.valueOf(rootProject.getBuildProperty()["baseLibVersionCode"])
+        versionName rootProject.getBuildProperty()["baseLibVersionName"]
     }
 
     buildTypes {
