--- a/config/dependence.properties
+++ b/config/dependence.properties
@@ -1,12 +1,17 @@
 # 项目的依赖类库
-support_v7=com.android.support:appcompat-v7:28.0.0
-support_design=com.android.support:design:28.0.0
-support_cardview=com.android.support:cardview-v7:28.0.0
-support_recyclerview=com.android.support:recyclerview-v7:28.0.0
-constraint-layout=com.android.support.constraint:constraint-layout:1.1.3
+appcompat = androidx.appcompat:appcompat:1.0.0
+material = com.google.android.material:material:1.0.0-rc01
+cardview = androidx.cardview:cardview:1.0.0
+recyclerview = androidx.recyclerview:recyclerview:1.0.0
+constraintlayout = androidx.constraintlayout:constraintlayout:1.1.2
+
 kotlin=org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.2.70
+
 fragmentation_core=me.yokeyword:fragmentation-core:1.3.5
 fragmentation_swipeback=me.yokeyword:fragmentation-swipeback:1.3.5
+
 smartrefresh=com.scwang.smartrefresh:SmartRefreshLayout:1.0.4-7
 smartrefresh_header=com.scwang.smartrefresh:SmartRefreshHeader:1.0.4-7
+
 sonic=com.tencent.sonic:sdk:3.0.0
+
