--- a/baselib/build.gradle
+++ b/baselib/build.gradle
@@ -53,4 +53,5 @@ dependencies {
     implementation 'com.mikepenz:material-design-iconic-typeface:2.2.0.5@aar'
     implementation 'com.mikepenz:fontawesome-typeface:5.3.1.1@aar'
     implementation 'com.mikepenz:foundation-icons-typeface:3.0.0.5@aar'
+    implementation 'com.mikepenz:ionicons-typeface:+@aar'
 }
