--- a/config/build.properties
+++ b/config/build.properties
@@ -15,17 +15,12 @@ compileSdkVersion=28
 versionCode=1000
 versionName='1.0.3'
 #------------------------#
-# BaseLib类库的版本
+# baselib类库的版本
 baseLibVersionCode=1000
-baseLibVersionName='1.1.1'
+baseLibVersionName='1.1.6'
 #------------------------#
-# NetGo类库的版本
-netGoVersionCode=1000
-netGoVersionName='1.0.0'
+# baseuilib类库的版本
+baseUiLibVersionCode=1000
+baseUiLibVersionName='1.1.6'
 #------------------------#
-# ImageGo类库的版本
-imageGoVersionCode=1000
-imageGoVersionName='2.0.2'
-
-
 
