--- a/baselib/build.gradle
+++ b/baselib/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.github.dcendents.android-maven'
 
-group = 'com.github.pinger'
+group = 'com.github.PingerOne'
 
 android {
     compileSdkVersion Integer.valueOf(rootProject.getBuildProperty()["compileSdkVersion"])
@@ -31,5 +31,5 @@ dependencies {
     api project(":baseuilib")
 
     // h5秒开
-    api rootProject.getDependenceProperty()['sonic']
+    implementation rootProject.getDependenceProperty()['sonic']
 }
