--- a/config/dependence.properties
+++ b/config/dependence.properties
@@ -1,17 +1,16 @@
 # 项目的依赖类库
-appcompat = androidx.appcompat:appcompat:1.0.0
-material = com.google.android.material:material:1.0.0-rc01
-cardview = androidx.cardview:cardview:1.0.0
-recyclerview = androidx.recyclerview:recyclerview:1.0.0
-constraintlayout = androidx.constraintlayout:constraintlayout:1.1.2
-
+appcompat=androidx.appcompat:appcompat:1.0.0
+material=com.google.android.material:material:1.0.0-rc01
+cardview=androidx.cardview:cardview:1.0.0
+recyclerview=androidx.recyclerview:recyclerview:1.0.0
+constraintlayout=androidx.constraintlayout:constraintlayout:1.1.2
 kotlin=org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.2.70
-
 fragmentation_core=me.yokeyword:fragmentation-core:1.3.5
 fragmentation_swipeback=me.yokeyword:fragmentation-swipeback:1.3.5
-
 smartrefresh=com.scwang.smartrefresh:SmartRefreshLayout:1.0.4-7
 smartrefresh_header=com.scwang.smartrefresh:SmartRefreshHeader:1.0.4-7
-
 sonic=com.tencent.sonic:sdk:3.0.0
+# font icons
+iconics=com.mikepenz:iconics-core:3.1.0
+material_design_iconic=com.mikepenz:material-design-iconic-typeface:2.2.0.5@aar
 
