--- a/config/dependence.properties
+++ b/config/dependence.properties
@@ -12,5 +12,5 @@ smartrefresh_header=com.scwang.smartrefresh:SmartRefreshHeader:1.0.4-7
 sonic=com.tencent.sonic:sdk:3.0.0
 # font icons
 iconics=com.mikepenz:iconics-core:3.1.0
-material_design_iconic=com.mikepenz:material-design-iconic-typeface:2.2.0.5@aar
+material_design_iconic=com.mikepenz:google-material-typeface:3.0.1.3.original@aar
 
